--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap');
+
 .App {
   text-align: center;
 }
@@ -5,34 +7,18 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+  height: 20vmin;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.hPage {
+  background-color: #45c2f4;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  font-family: 'Noto Sans JP', sans-serif;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.body1 {
+  text-align: left;
 }
